--- a/index.html
+++ b/index.html
@@ -3,110 +3,204 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Turtle Island Financing — Indigenous Owned & Led Auto Financing in Canada</title>
+  <title>Turtle Island Financing — Indigenous Owned & led Auto Financing in Canada</title>
   <meta name="description" content="Indigenous-owned lead service in Canada. Dealers trained in Indigenous protocol. Transparent, Canadian info only.">
   <meta property="og:title" content="Turtle Island Financing — Respectful Auto Financing">
   <meta property="og:description" content="We connect you to trained partner dealerships. Transparent, honest, and culturally sensitive.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/hero-art.svg">
+  <!-- Updated OG image -->
+  <meta property="og:image" content="assets/hero-joyful-truck.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="assets/favicon.png">
 </head>
 <body>
-
-  <!-- HEADER -->
   <header class="site-header">
     <div class="container nav">
-      <a href="#" class="brand">
-        <img src="assets/favicon.png" alt="Turtle Island Logo" class="logo">
-        <span class="brand-text">Turtle Island Financing</span>
-      </a>
+      <div class="brand">
+        <div class="logo">🐢</div>
+        <div class="brand-text">
+          <h1>Turtle Island Financing</h1>
+          <p class="tag">Indigenous-owned & led • Canada</p>
+        </div>
+      </div>
       <nav class="top-nav">
-        <a href="#supports" class="btn-outline">Supports</a>
-        <a href="#verify" class="btn-outline">Verify</a>
-        <a href="#dealers" class="btn-outline">For Dealers</a>
-        <a href="#apply" class="btn-primary">Apply Now</a>
+        <a class="btn link" href="/supports.html">Supports</a>
+        <a class="btn link" href="/verify.html">Verify</a>
+        <a class="btn link" href="/dealers.html">For Dealers</a>
+        <a class="btn ghost" href="#apply">Apply Now</a>
       </nav>
     </div>
   </header>
 
-  <!-- HERO -->
   <section class="hero">
-    <div class="container hero-content">
-      <div class="hero-text">
-        <h1>Keep Your Tax Savings. Choose With Confidence.</h1>
-        <p><strong>At Turtle Island Financing</strong>, you’re not just tax-exempt — you’re exempt from bad deals, gimmicks, and pressure too.</p>
-        <p>We protect your Indigenous tax exemption and show every line of your deal transparently. Honest financing with Free, Prior, and Informed Consent (FPIC).</p>
-        <div class="hero-buttons">
-          <a href="#apply" class="btn-primary">Get Pre-Approved</a>
-          <a href="#how" class="btn-outline">See How It Works</a>
+    <div class="container hero-grid">
+      <div class="hero-copy">
+        <h2>Respectful auto financing — built for our communities.</h2>
+        <p>We connect you with trained partner dealerships across Canada. Transparent, honest, and culturally sensitive from start to finish.</p>
+        <div class="hero-ctas">
+          <a class="btn" href="#apply">Start Pre-Approval</a>
+          <a class="btn link" href="#how-we-help">How We Help</a>
+          <a class="btn link" href="/supports.html">Supports & Roadmap</a>
         </div>
-        <div class="trust-badges">
-          <span class="badge">CCAB Certified</span>
-          <span class="badge">Trauma-informed & OCAP®-trained</span>
-          <span class="badge">Approved dealer network (TRC & FPIC)</span>
-          <span class="badge">Respectful tax-exemption handling</span>
-        </div>
+        <ul class="pill-list">
+          <li>No cost to you</li>
+          <li>No false promises</li>
+          <li>Tax exemption handled respectfully</li>
+          <li>Dealers trained by us</li>
+        </ul>
       </div>
-      <div class="hero-image">
-        <img src="assets/hero-joyful-truck.png" alt="Happy Indigenous family with new truck">
+      <div class="hero-art">
+        <div class="sun"></div>
+        <div class="circle"></div>
+        <img src="assets/hero-joyful-truck.png"
+             alt="Happy customer celebrating a new truck purchase — Turtle Island Financing"
+             loading="eager" fetchpriority="high" decoding="async" />
         <p class="hero-caption">The only thing fake about Turtle Island Financing is this AI Picture 😅</p>
       </div>
     </div>
   </section>
 
-  <!-- TRUTH SECTION -->
-  <section id="truth" class="truth">
+  <section id="how-we-help" class="role">
     <div class="container">
-      <h2>Truth in Financing: Unaffiliated Dealer vs. Turtle Island Financing</h2>
-      <p>How some unaffiliated dealers inflate your loan vs. how Turtle Island Financing protects your savings.</p>
-      <table class="comparison">
-        <thead>
-          <tr>
-            <th>Line Item</th>
-            <th>Unaffiliated Dealer</th>
-            <th>Turtle Island Financing</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Tax Exemption</td>
-            <td>Not respected, buried in payments</td>
-            <td>Applied transparently, savings shown upfront</td>
-          </tr>
-          <tr>
-            <td>Warranty & Add-ons</td>
-            <td>Padded with pressure tactics</td>
-            <td>Optional, explained with consent</td>
-          </tr>
-          <tr>
-            <td>Loan Terms</td>
-            <td>Inflated interest rates</td>
-            <td>Competitive and transparent</td>
-          </tr>
-          <tr>
-            <td>Transparency</td>
-            <td>Hidden numbers & gimmicks</td>
-            <td>Every figure explained openly</td>
-          </tr>
-        </tbody>
-      </table>
+      <h3>Our Role in Your Financing Journey</h3>
+      <div class="cards">
+        <div class="card"><h4>Connect</h4><p>We match you with the best-suited partner dealership based on your needs, location, and situation.</p></div>
+        <div class="card"><h4>Prepare</h4><p>We publish a standard roadmap so you know what Canadian lenders typically require. No one-on-one planning needed.</p></div>
+        <div class="card"><h4>Mediate</h4><p>We stay in the loop to maintain respect, transparency, and clear communication throughout the process.</p></div>
+        <div class="card"><h4>Support</h4><p>We encourage dignity and cultural sensitivity from the first contact to the final decision.</p></div>
+      </div>
     </div>
   </section>
 
-  <!-- CCAB / CIB LOGO -->
-  <aside class="trust">
+  <section class="dealer-network">
     <div class="container">
-      <img src="assets/CIB-LogoH-Colour (1).png" alt="CCAB Certified" class="ccab-logo">
-      <p class="muted">100% Indigenous-Owned • CCAB Certified</p>
+      <h3>A Dealer Network That Respects You</h3>
+      <ul class="checklist">
+        <li><strong>Trained by us</strong> to be patient, respectful, and transparent.</li>
+        <li><strong>Educated on Indigenous history and protocol</strong> to honour your perspective.</li>
+        <li>No high-pressure sales or tax-exemption gimmicks.</li>
+        <li>Comfortable working with seasonal, self-employed, and tax-exempt income within Canadian rules.</li>
+      </ul>
     </div>
-  </aside>
+  </section>
 
-  <!-- FOOTER -->
-  <footer class="site-footer">
+  <section class="why-choose">
     <div class="container">
-      <p>&copy; 2025 Turtle Island Financing. All rights reserved.</p>
+      <h3>Why Choose Turtle Island Financing?</h3>
+      <div class="why-grid">
+        <div class="why-item"><h4>Transparent &amp; Honest</h4><p>No hidden fees or false promises. What you see is what you get.</p></div>
+        <div class="why-item"><h4>Respect for Your Tax Exemption</h4><p>We ensure any tax savings stay yours—no clawbacks via inflated pricing or add-ons.</p></div>
+        <div class="why-item"><h4>Real Savings = Your Choice</h4><p>Use savings to lower payments, upgrade your vehicle, or keep them—no pressure.</p></div>
+        <div class="why-item"><h4>Culturally Rooted Service</h4><p>Indigenous-owned and community-minded, serving clients across Canada.</p></div>
+        <div class="why-item"><h4>No Upsell Games</h4><p>We work only with partner dealers who commit to fairness and transparency.</p></div>
+      </div>
+    </div>
+  </section>
+
+  <section id="apply" class="form-wrap">
+    <div class="container grid">
+      <div class="form-card">
+        <h3>Quick Pre-Approval</h3>
+        <p class="muted">We’ll share your application with a trained partner dealership in Canada. They may contact you by phone, SMS, or email.</p>
+
+        <form name="preapproval"
+              method="POST"
+              data-netlify="true"
+              netlify-honeypot="bot-field"
+              action="/thank-you.html"
+              id="leadForm">
+          <input type="hidden" name="form-name" value="preapproval">
+          <p style="position:absolute;left:-9999px;">
+            <label>Don’t fill this out: <input name="bot-field"></label>
+          </p>
+
+          <input type="hidden" name="utm_source"><input type="hidden" name="utm_medium">
+          <input type="hidden" name="utm_campaign"><input type="hidden" name="utm_term">
+          <input type="hidden" name="utm_content">
+
+          <div class="row">
+            <label>Full Name*<input type="text" name="name" required></label>
+            <label>Phone*<input type="tel" name="phone" required placeholder="e.g., 604-555-0123"></label>
+          </div>
+          <div class="row">
+            <label>Email*<input type="email" name="email" required></label>
+            <label>Province/Territory*<select name="province" required>
+              <option value="">Select…</option>
+              <option>BC</option><option>AB</option><option>SK</option><option>MB</option>
+              <option>ON</option><option>QC</option><option>NB</option><option>NS</option>
+              <option>PE</option><option>NL</option><option>YT</option><option>NT</option><option>NU</option>
+            </select></label>
+          </div>
+          <div class="row">
+            <label>Estimated Credit<select name="credit">
+              <option value="">Prefer not to say</option><option>Excellent (720+)</option>
+              <option>Good (660–719)</option><option>Fair (600–659)</option>
+              <option>Building (&lt;600)</option><option>New to credit</option>
+            </select></label>
+            <label>Seeking<select name="seeking">
+              <option value="">Select…</option><option>Car</option><option>Truck</option><option>SUV</option><option>Van</option>
+            </select></label>
+          </div>
+          <label>Notes (optional)<textarea name="notes" rows="3" placeholder="Seasonal fishing, self-employed, on-reserve delivery, timeline, budget…"></textarea></label>
+
+          <label class="consent">
+            <input type="checkbox" name="consent" required>
+            I consent to my application being shared with partner dealerships for the purpose of securing financing.
+            I understand the dealership will perform a credit check as part of the process. I agree to receive communications related to my application.
+            There is no cost to me for this service; the partner dealership pays the referral fee.
+          </label>
+
+          <button type="submit" class="btn wide">Get Pre-Approved</button>
+        </form>
+      </div>
+
+      <aside class="trust">
+        <h4>Trust &amp; Certification</h4>
+        <div class="ccab-badge" role="group" aria-label="Certification badge">
+          <img src="assets/CIB-LogoH-Colour (1).png" alt="Certified Aboriginal Business (CAB) — Canadian Council for Aboriginal Business" class="ccab-logo">
+          <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
+        </div>
+        <ul class="bullets">
+          <li>Brooke Ashley Group Inc. (o/a Turtle Island Financing)</li>
+          <li>100% Indigenous-owned and operated</li>
+          <li>OCAP®-aligned, trauma-informed trained staff</li>
+        </ul>
+        <div class="disclaimer">
+          <p class="muted small"><strong>Disclaimer:</strong> Turtle Island Financing connects applicants with Canadian partner dealerships. Approvals, rates, and terms are decided by the dealer and their lenders.</p>
+        </div>
+      </aside>
+    </div>
+  </section>
+
+  <footer class="site-footer">
+    <div class="container foot">
+      <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong> • <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span></p>
+      <nav>
+        <a href="#apply">Apply</a>
+        <a href="/supports.html">Supports</a>
+        <a href="/verify.html">Verify</a>
+        <a href="/dealers.html">For Dealers</a>
+        <a href="/standards.html">Our Standards</a>
+        <a href="#" onclick="window.alert('Email: hello@turtleislandfinancing.ca'); return false;">Contact</a>
+        <a href="#" onclick="window.alert('Privacy: We share your info only with partner dealers for financing.'); return false;">Privacy</a>
+      </nav>
     </div>
   </footer>
 
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+  <script src="script.js"></script>
 </body>
 </html>
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script>
+  if (window.netlifyIdentity) {
+    netlifyIdentity.on('login', () => {
+      document.location.href = '/dealers/portal.html';
+    });
+  }
+</script>
