--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta property="og:title" content="Turtle Island Financing — Respectful Auto Financing">
   <meta property="og:description" content="We connect you to trained partner dealerships. Transparent, honest, and culturally sensitive.">
   <meta property="og:type" content="website">
-  <!-- Updated OG image -->
   <meta property="og:image" content="assets/hero-joyful-truck.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,6 +16,7 @@
   <link rel="icon" href="assets/favicon.png">
 </head>
 <body>
+  <!-- HEADER -->
   <header class="site-header">
     <div class="container nav">
       <div class="brand">
@@ -27,14 +27,15 @@
         </div>
       </div>
       <nav class="top-nav">
-        <a class="btn link" href="/supports.html">Supports</a>
-        <a class="btn link" href="/verify.html">Verify</a>
-        <a class="btn link" href="/dealers.html">For Dealers</a>
+        <a class="btn link" href="/supports">Supports</a>
+        <a class="btn link" href="/verify">Verify</a>
+        <a class="btn link" href="/dealers">For Dealers</a>
         <a class="btn ghost" href="#apply">Apply Now</a>
       </nav>
     </div>
   </header>
 
+  <!-- HERO -->
   <section class="hero">
     <div class="container hero-grid">
       <div class="hero-copy">
@@ -42,8 +43,8 @@
         <p>We connect you with trained partner dealerships across Canada. Transparent, honest, and culturally sensitive from start to finish.</p>
         <div class="hero-ctas">
           <a class="btn" href="#apply">Start Pre-Approval</a>
-          <a class="btn link" href="#how-we-help">How We Help</a>
-          <a class="btn link" href="/supports.html">Supports & Roadmap</a>
+          <a class="btn link" href="#truth">How It Works</a>
+          <a class="btn link" href="/supports">Supports & Roadmap</a>
         </div>
         <ul class="pill-list">
           <li>No cost to you</li>
@@ -63,18 +64,94 @@
     </div>
   </section>
 
-  <section id="how-we-help" class="role">
+  <!-- TRUTH IN FINANCING (Dealer Comparison) -->
+  <section id="truth" class="truth-in-financing">
     <div class="container">
-      <h3>Our Role in Your Financing Journey</h3>
-      <div class="cards">
-        <div class="card"><h4>Connect</h4><p>We match you with the best-suited partner dealership based on your needs, location, and situation.</p></div>
-        <div class="card"><h4>Prepare</h4><p>We publish a standard roadmap so you know what Canadian lenders typically require. No one-on-one planning needed.</p></div>
-        <div class="card"><h4>Mediate</h4><p>We stay in the loop to maintain respect, transparency, and clear communication throughout the process.</p></div>
-        <div class="card"><h4>Support</h4><p>We encourage dignity and cultural sensitivity from the first contact to the final decision.</p></div>
+      <h3>Truth in Financing: Unaffiliated Dealer vs. Turtle Island Financing</h3>
+      <p class="muted">How some unaffiliated dealers inflate your loan vs. how Turtle Island Financing protects your savings.</p>
+      <table class="comparison">
+        <thead>
+          <tr>
+            <th>Line Item</th>
+            <th>Unaffiliated Dealer</th>
+            <th>Turtle Island Financing</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Vehicle Price</td>
+            <td>$25,000</td>
+            <td>$25,000</td>
+          </tr>
+          <tr>
+            <td>Fees (doc + finance)</td>
+            <td>$1,090</td>
+            <td>$1,090</td>
+          </tr>
+          <tr>
+            <td>Taxes (GST+PST)</td>
+            <td>$3,129.80</td>
+            <td>$0 (Exempt)</td>
+          </tr>
+          <tr>
+            <td>Add‑Ons / Cash Back</td>
+            <td>$4,780</td>
+            <td>$0 (optional)</td>
+          </tr>
+          <tr>
+            <td><strong>Amount Financed</strong></td>
+            <td><strong>$34,000</strong></td>
+            <td><strong>$26,090</strong></td>
+          </tr>
+          <tr>
+            <td>Monthly Payment (60mo @10%)</td>
+            <td>$722</td>
+            <td>$554</td>
+          </tr>
+          <tr>
+            <td><strong>Total of Payments</strong></td>
+            <td><strong>$43,320</strong></td>
+            <td><strong>$33,240</strong></td>
+          </tr>
+          <tr>
+            <td>Total Interest Paid</td>
+            <td>$9,320</td>
+            <td>$7,150</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="cta-center">
+        <a class="btn wide" href="#apply">Protect My Savings → Apply Now</a>
       </div>
     </div>
   </section>
 
+  <!-- HOW WE HELP -->
+  <section id="how-we-help" class="role">
+    <div class="container">
+      <h3>Our Role in Your Financing Journey</h3>
+      <div class="cards">
+        <div class="card">
+          <h4>Connect</h4>
+          <p>We match you with the best-suited partner dealership based on your needs, location, and situation.</p>
+        </div>
+        <div class="card">
+          <h4>Prepare</h4>
+          <p>We publish a standard roadmap so you know what Canadian lenders typically require. No one-on-one planning needed.</p>
+        </div>
+        <div class="card">
+          <h4>Mediate</h4>
+          <p>We stay in the loop to maintain respect, transparency, and clear communication throughout the process.</p>
+        </div>
+        <div class="card">
+          <h4>Support</h4>
+          <p>We encourage dignity and cultural sensitivity from the first contact to the final decision.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- DEALER NETWORK -->
   <section class="dealer-network">
     <div class="container">
       <h3>A Dealer Network That Respects You</h3>
@@ -87,6 +164,7 @@
     </div>
   </section>
 
+  <!-- WHY CHOOSE -->
   <section class="why-choose">
     <div class="container">
       <h3>Why Choose Turtle Island Financing?</h3>
@@ -100,18 +178,14 @@
     </div>
   </section>
 
+  <!-- APPLY -->
   <section id="apply" class="form-wrap">
     <div class="container grid">
       <div class="form-card">
         <h3>Quick Pre-Approval</h3>
         <p class="muted">We’ll share your application with a trained partner dealership in Canada. They may contact you by phone, SMS, or email.</p>
 
-        <form name="preapproval"
-              method="POST"
-              data-netlify="true"
-              netlify-honeypot="bot-field"
-              action="/thank-you.html"
-              id="leadForm">
+        <form action="/thank-you" id="leadForm" method="POST" name="preapproval">
           <input type="hidden" name="form-name" value="preapproval">
           <p style="position:absolute;left:-9999px;">
             <label>Don’t fill this out: <input name="bot-field"></label>
@@ -175,15 +249,16 @@
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container foot">
       <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong> • <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span></p>
       <nav>
         <a href="#apply">Apply</a>
-        <a href="/supports.html">Supports</a>
-        <a href="/verify.html">Verify</a>
-        <a href="/dealers.html">For Dealers</a>
-        <a href="/standards.html">Our Standards</a>
+        <a href="/supports">Supports</a>
+        <a href="/verify">Verify</a>
+        <a href="/dealers">For Dealers</a>
+        <a href="/standards">Our Standards</a>
         <a href="#" onclick="window.alert('Email: hello@turtleislandfinancing.ca'); return false;">Contact</a>
         <a href="#" onclick="window.alert('Privacy: We share your info only with partner dealers for financing.'); return false;">Privacy</a>
       </nav>
