--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Turtle Island Financing — Indigenous Owned & led Auto Financing in Canada</title>
+  <title>Turtle Island Financing — Indigenous Owned & Led Auto Financing in Canada</title>
   <meta name="description" content="Indigenous-owned lead service in Canada. Dealers trained in Indigenous protocol. Transparent, Canadian info only.">
   <meta property="og:title" content="Turtle Island Financing — Respectful Auto Financing">
   <meta property="og:description" content="We connect you to trained partner dealerships. Transparent, honest, and culturally sensitive.">
@@ -14,9 +14,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="assets/favicon.png">
+  <style>
+    .ccab-logo {
+      max-width: 220px;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+    .hero-caption {
+      text-align: center;
+      font-weight: 600;
+      color: #444;
+      margin-top: .5rem;
+    }
+  </style>
 </head>
 <body>
-  <!-- HEADER -->
   <header class="site-header">
     <div class="container nav">
       <div class="brand">
@@ -27,24 +40,23 @@
         </div>
       </div>
       <nav class="top-nav">
-        <a class="btn link" href="/supports">Supports</a>
-        <a class="btn link" href="/verify">Verify</a>
-        <a class="btn link" href="/dealers">For Dealers</a>
+        <a class='btn link' href='/supports'>Supports</a>
+        <a class='btn link' href='/verify'>Verify</a>
+        <a class='btn link' href='/dealers'>For Dealers</a>
         <a class="btn ghost" href="#apply">Apply Now</a>
       </nav>
     </div>
   </header>
 
-  <!-- HERO -->
   <section class="hero">
     <div class="container hero-grid">
       <div class="hero-copy">
-        <h2>Respectful auto financing — built for our communities.</h2>
+        <h2>At Turtle Island you are not only tax exempt, you are bad deal exempt, gimmick exempt, pressure exempt.</h2>
         <p>We connect you with trained partner dealerships across Canada. Transparent, honest, and culturally sensitive from start to finish.</p>
         <div class="hero-ctas">
           <a class="btn" href="#apply">Start Pre-Approval</a>
-          <a class="btn link" href="#truth">How It Works</a>
-          <a class="btn link" href="/supports">Supports & Roadmap</a>
+          <a class="btn link" href="#how-we-help">How We Help</a>
+          <a class='btn link' href='/supports'>Supports & Roadmap</a>
         </div>
         <ul class="pill-list">
           <li>No cost to you</li>
@@ -54,8 +66,6 @@
         </ul>
       </div>
       <div class="hero-art">
-        <div class="sun"></div>
-        <div class="circle"></div>
         <img src="assets/hero-joyful-truck.png"
              alt="Happy customer celebrating a new truck purchase — Turtle Island Financing"
              loading="eager" fetchpriority="high" decoding="async" />
@@ -64,136 +74,58 @@
     </div>
   </section>
 
-  <!-- TRUTH IN FINANCING (Dealer Comparison) -->
-  <section id="truth" class="truth-in-financing">
-    <div class="container">
-      <h3>Truth in Financing: Unaffiliated Dealer vs. Turtle Island Financing</h3>
-      <p class="muted">How some unaffiliated dealers inflate your loan vs. how Turtle Island Financing protects your savings.</p>
-      <table class="comparison">
-        <thead>
-          <tr>
-            <th>Line Item</th>
-            <th>Unaffiliated Dealer</th>
-            <th>Turtle Island Financing</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Vehicle Price</td>
-            <td>$25,000</td>
-            <td>$25,000</td>
-          </tr>
-          <tr>
-            <td>Fees (doc + finance)</td>
-            <td>$1,090</td>
-            <td>$1,090</td>
-          </tr>
-          <tr>
-            <td>Taxes (GST+PST)</td>
-            <td>$3,129.80</td>
-            <td>$0 (Exempt)</td>
-          </tr>
-          <tr>
-            <td>Add‑Ons / Cash Back</td>
-            <td>$4,780</td>
-            <td>$0 (optional)</td>
-          </tr>
-          <tr>
-            <td><strong>Amount Financed</strong></td>
-            <td><strong>$34,000</strong></td>
-            <td><strong>$26,090</strong></td>
-          </tr>
-          <tr>
-            <td>Monthly Payment (60mo @10%)</td>
-            <td>$722</td>
-            <td>$554</td>
-          </tr>
-          <tr>
-            <td><strong>Total of Payments</strong></td>
-            <td><strong>$43,320</strong></td>
-            <td><strong>$33,240</strong></td>
-          </tr>
-          <tr>
-            <td>Total Interest Paid</td>
-            <td>$9,320</td>
-            <td>$7,150</td>
-          </tr>
-        </tbody>
-      </table>
-      <div class="cta-center">
-        <a class="btn wide" href="#apply">Protect My Savings → Apply Now</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- HOW WE HELP -->
   <section id="how-we-help" class="role">
     <div class="container">
       <h3>Our Role in Your Financing Journey</h3>
       <div class="cards">
-        <div class="card">
-          <h4>Connect</h4>
-          <p>We match you with the best-suited partner dealership based on your needs, location, and situation.</p>
-        </div>
-        <div class="card">
-          <h4>Prepare</h4>
-          <p>We publish a standard roadmap so you know what Canadian lenders typically require. No one-on-one planning needed.</p>
-        </div>
-        <div class="card">
-          <h4>Mediate</h4>
-          <p>We stay in the loop to maintain respect, transparency, and clear communication throughout the process.</p>
-        </div>
-        <div class="card">
-          <h4>Support</h4>
-          <p>We encourage dignity and cultural sensitivity from the first contact to the final decision.</p>
-        </div>
+        <div class="card"><h4>Connect</h4><p>We match you with the best-suited partner dealership based on your needs, location, and situation.</p></div>
+        <div class="card"><h4>Prepare</h4><p>We publish a standard roadmap so you know what Canadian lenders typically require. No one-on-one planning needed.</p></div>
+        <div class="card"><h4>Mediate</h4><p>We stay in the loop to maintain respect, transparency, and clear communication throughout the process.</p></div>
+        <div class="card"><h4>Support</h4><p>We encourage dignity and cultural sensitivity from the first contact to the final decision.</p></div>
       </div>
     </div>
   </section>
 
-  <!-- DEALER NETWORK -->
-  <section class="dealer-network">
+  <section class="dealer-comparison">
     <div class="container">
-      <h3>A Dealer Network That Respects You</h3>
-      <ul class="checklist">
-        <li><strong>Trained by us</strong> to be patient, respectful, and transparent.</li>
-        <li><strong>Educated on Indigenous history and protocol</strong> to honour your perspective.</li>
-        <li>No high-pressure sales or tax-exemption gimmicks.</li>
-        <li>Comfortable working with seasonal, self-employed, and tax-exempt income within Canadian rules.</li>
-      </ul>
+      <h3>Dealer Comparison</h3>
+      <table class="comparison">
+        <thead>
+          <tr>
+            <th>Turtle Island Financing</th>
+            <th>Unaffiliated Dealer</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Tax savings stay with you</td>
+            <td>Tax savings often lost in inflated pricing</td>
+          </tr>
+          <tr>
+            <td>Transparent, trauma-informed staff</td>
+            <td>Pressure tactics and upsells</td>
+          </tr>
+          <tr>
+            <td>Dealers trained in Indigenous history & TRC</td>
+            <td>No cultural awareness</td>
+          </tr>
+          <tr>
+            <td>OCAP® aligned privacy protection</td>
+            <td>Data sold or misused</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </section>
 
-  <!-- WHY CHOOSE -->
-  <section class="why-choose">
-    <div class="container">
-      <h3>Why Choose Turtle Island Financing?</h3>
-      <div class="why-grid">
-        <div class="why-item"><h4>Transparent &amp; Honest</h4><p>No hidden fees or false promises. What you see is what you get.</p></div>
-        <div class="why-item"><h4>Respect for Your Tax Exemption</h4><p>We ensure any tax savings stay yours—no clawbacks via inflated pricing or add-ons.</p></div>
-        <div class="why-item"><h4>Real Savings = Your Choice</h4><p>Use savings to lower payments, upgrade your vehicle, or keep them—no pressure.</p></div>
-        <div class="why-item"><h4>Culturally Rooted Service</h4><p>Indigenous-owned and community-minded, serving clients across Canada.</p></div>
-        <div class="why-item"><h4>No Upsell Games</h4><p>We work only with partner dealers who commit to fairness and transparency.</p></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- APPLY -->
   <section id="apply" class="form-wrap">
     <div class="container grid">
       <div class="form-card">
         <h3>Quick Pre-Approval</h3>
         <p class="muted">We’ll share your application with a trained partner dealership in Canada. They may contact you by phone, SMS, or email.</p>
 
-        <form action="/thank-you" id="leadForm" method="POST" name="preapproval">
+        <form action='/thank-you' id='leadForm' method='POST' name='preapproval'>
           <input type="hidden" name="form-name" value="preapproval">
-          <p style="position:absolute;left:-9999px;">
-            <label>Don’t fill this out: <input name="bot-field"></label>
-          </p>
-
-          <input type="hidden" name="utm_source"><input type="hidden" name="utm_medium">
-          <input type="hidden" name="utm_campaign"><input type="hidden" name="utm_term">
-          <input type="hidden" name="utm_content">
 
           <div class="row">
             <label>Full Name*<input type="text" name="name" required></label>
@@ -220,11 +152,12 @@
           </div>
           <label>Notes (optional)<textarea name="notes" rows="3" placeholder="Seasonal fishing, self-employed, on-reserve delivery, timeline, budget…"></textarea></label>
 
+          <p class="muted small">🔒 Your information is protected under OCAP® principles — Ownership, Control, Access, and Possession. Turtle Island Financing will never sell or misuse your personal data.</p>
+
           <label class="consent">
             <input type="checkbox" name="consent" required>
             I consent to my application being shared with partner dealerships for the purpose of securing financing.
             I understand the dealership will perform a credit check as part of the process. I agree to receive communications related to my application.
-            There is no cost to me for this service; the partner dealership pays the referral fee.
           </label>
 
           <button type="submit" class="btn wide">Get Pre-Approved</button>
@@ -249,16 +182,15 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container foot">
       <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong> • <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span></p>
       <nav>
         <a href="#apply">Apply</a>
-        <a href="/supports">Supports</a>
-        <a href="/verify">Verify</a>
-        <a href="/dealers">For Dealers</a>
-        <a href="/standards">Our Standards</a>
+        <a href='/supports'>Supports</a>
+        <a href='/verify'>Verify</a>
+        <a href='/dealers'>For Dealers</a>
+        <a href='/standards'>Our Standards</a>
         <a href="#" onclick="window.alert('Email: hello@turtleislandfinancing.ca'); return false;">Contact</a>
         <a href="#" onclick="window.alert('Privacy: We share your info only with partner dealers for financing.'); return false;">Privacy</a>
       </nav>
@@ -271,11 +203,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-<script>
-  if (window.netlifyIdentity) {
-    netlifyIdentity.on('login', () => {
-      document.location.href = '/dealers/portal.html';
-    });
-  }
-</script>
