--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
       <aside class="trust">
         <h4>Trust &amp; Certification</h4>
         <div class="ccab-badge" role="group" aria-label="Certification badge">
-          <img src="assets/CIB-LogoH-Colour (1).png" alt="Certified Aboriginal Business (CAB) — Canadian Council for Aboriginal Business" class="ccab-logo">
+          <img src="https://raw.githubusercontent.com/Brookeashleygroup/Turtle-Island-Financing/main/assets/CIB-LogoH-Colour%20(1).png" 
+               alt="Certified Aboriginal Business (CAB) — Canadian Council for Aboriginal Business" 
+               class="ccab-logo">
           <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
         </div>
         <ul class="bullets">
